test/fail/object-ext-pseudo.mo
let tb_bad = { "Text base" with bar = 42 };
let ab_bad = { ["Array base"] with bar = 42 };
